--- a/QuizApp/app/src/main/res/layout/activity_main.xml
+++ b/QuizApp/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,26 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="wisc.cs.quizapp.MainActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/welcomeText"
+        android:layout_centerHorizontal="true"
+        android:editable="false"
+        android:layout_marginTop="40dp"
+        android:text="Welcome!!! Time to take a quiz."/>
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/score"
+        android:layout_centerHorizontal="true"
+        android:editable="false"
+        android:layout_marginTop="120dp"/>
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
