--- a/QuizApp/app/src/main/res/layout/image_question_fragment.xml
+++ b/QuizApp/app/src/main/res/layout/image_question_fragment.xml
@@ -25,6 +25,7 @@
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         android:layout_marginTop="45dp"
+        android:layout_marginLeft="10dp"
         android:text="Type answer here">
     </EditText>
 
