added more: questions start button changes to restart button after first quiz attempt main activity gets a quit button Welcome message is removed after use completes the first quiz
note all questions get answered every time, but they are in random order

--- a/QuizApp/app/src/main/res/layout/activity_main.xml
+++ b/QuizApp/app/src/main/res/layout/activity_main.xml
@@ -40,4 +40,15 @@
         android:longClickable="false"
         android:nestedScrollingEnabled="false"
         android:onClick="onStartQuizButtonPress"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Quit"
+        android:id="@+id/quit"
+        android:layout_centerHorizontal="true"
+        android:longClickable="false"
+        android:nestedScrollingEnabled="false"
+        android:onClick="quit"
+        android:layout_marginTop="280dp"/>
 </RelativeLayout>
